Add workflow_dispatch event to deployfe.yml for manual triggering

--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -16,6 +16,7 @@ on:
       - 'package.json'
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   pack-and-deploy-to-gh-pages:
