--- a/viewer/package.json
+++ b/viewer/package.json
@@ -36,8 +36,8 @@
     },
     "eslintConfig": {
         "extends": [
-            "react-app",
-            "react-app/jest"
+            "eslint:recommended",
+            "plugin:react/recommended"
         ]
     },
     "browserslist": {
