--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.15",
     "license": "MIT",
     "sideEffects": false,
+    "homepage": "https://api3dao.github.io/logos/",
     "repository": {
         "type": "git",
         "url": "https://github.com/api3dao/logos"
