--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -49,7 +49,7 @@ jobs:
       
       - name: Check dapi-management
         if: ${{ inputs.update-dapi-management == true }}
-        run: pnpm up @api3/dapi-management --latest
+        run: pnpm up @api3/dapi-management --recursive --latest
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
