Update release workflow scripts

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -6,10 +6,6 @@ on:
       - cron: '15 8,12,16,20 * * *'
   workflow_dispatch:
 
-env:
-  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  NPM_CONFIG_PROVENANCE: true
-
 jobs:       
   release:
     name: Release
@@ -61,6 +57,14 @@ jobs:
       - name: Setup pnpm
         if: steps.check_files.outputs.files_exists == 'true'
         uses: pnpm/action-setup@v4
+
+      - name: Setup Node
+        if: steps.check_files.outputs.files_exists == 'true'
+        uses: actions/setup-node@v6
+        with:
+          node-version: 24
+          registry-url: 'https://registry.npmjs.org'
+          cache: 'pnpm'
 
       - name: Install dependencies
         if: steps.check_files.outputs.files_exists == 'true'
