--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,10 +6,6 @@ on:
     branches:
       - production
 
-env:
-  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  NPM_CONFIG_PROVENANCE: true
-
 jobs:
   release:
     name: Release
@@ -27,6 +23,12 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: 24
+          registry-url: 'https://registry.npmjs.org'
+          cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
 
