Correct script name in extend workflow

--- a/.github/workflows/extender.yml
+++ b/.github/workflows/extender.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Extend extension.json
         run: |
-          node scripts/extender.js "${{ inputs.type }}" "${{ inputs.value }}"
+          node scripts/extend-json.js "${{ inputs.type }}" "${{ inputs.value }}"
 
       - name: Commit changes
         run: |
