--- a/.github/workflows/extender.yml
+++ b/.github/workflows/extender.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Git user
+        run: |
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
 
@@ -36,8 +41,6 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
           git add extension.json
-          git commit -m "chore: extend ${inputs.type}"
+          git commit -m "chore: extend ${{ inputs.type }}"
           git push
