--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,10 @@
 packages:
   - "."
   - "viewer"
+
+# See: https://pnpm.io/supply-chain-security
+blockExoticSubdeps: true
+minimumReleaseAge: 20160 # 14 days
+
+minimumReleaseAgeExclude:
+  - '@api3/*'
