Update script path for extend-json.js in workflows

--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -106,7 +106,7 @@ jobs:
       - name: Clear extension.json
         if: github.ref == 'refs/heads/main'
         run: |
-          node extend-json.js auto-clear
+          node scripts/extend-json.js auto-clear
 
       - name: Commit extension.json changes (if any)
         if: github.ref == 'refs/heads/main'
