--- a/.github/workflows/extender.yml
+++ b/.github/workflows/extender.yml
@@ -46,9 +46,9 @@ jobs:
       - name: Extend extension.json
         run: |
           if [ "${{ inputs.type }}" = "auto-clear" ]; then
-            node extend-json.js auto-clear
+            node scripts/extend-json.js auto-clear
           else
-            node extend-json.js "${{ inputs.type }}" "${{ inputs.value }}"
+            node scripts/extend-json.js "${{ inputs.type }}" "${{ inputs.value }}"
           fi
           
       - name: Commit changes (if any)
