Update deploy and extender workflows to streamline extension.json handling

--- a/.github/workflows/extender.yml
+++ b/.github/workflows/extender.yml
@@ -43,6 +43,9 @@ jobs:
           node-version: 24.12.0
           cache: 'pnpm'
 
+      - name: Install Packages  
+        run: pnpm install
+
       - name: Extend extension.json
         run: |
           if [ "${{ inputs.type }}" = "auto-clear" ]; then
